k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura-node
spec:
  template:
    spec:
      containers:
        - name: aura
          image: aequitas/aura:testnet
